--- a/app/src/main/res/drawable/btn_redondo.xml
+++ b/app/src/main/res/drawable/btn_redondo.xml
@@ -3,7 +3,7 @@
     <item android:left="2dp" android:top="2dp">
         <shape
             android:shape="oval">
-            <solid android:color="@color/colorPrimaryDark"/>
+            <solid android:color="@color/backgroundescuro_contraste"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
