--- a/app/src/main/res/layout/list_tipo_eventos.xml
+++ b/app/src/main/res/layout/list_tipo_eventos.xml
@@ -8,17 +8,23 @@
 
     <TextView
         android:id="@+id/tipo_evento_descricao"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_vertical_margin"
         android:textSize="22sp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        />
+        android:layout_marginBottom="10dp"/>
 
     <TextView
         android:id="@+id/id_tipo_evento"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
+
+    <TextView
+        android:id="@+id/tipo_evento_imagem"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
         android:layout_gravity="center"/>
