--- a/app/src/main/res/layout/list_eventos.xml
+++ b/app/src/main/res/layout/list_eventos.xml
@@ -178,4 +178,11 @@
         android:layout_height="wrap_content"
         android:visibility="gone"/>
 
+    <TextView
+        android:id="@+id/idTipoEvento"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:visibility="gone"/>
+
 </RelativeLayout>
