--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -2,24 +2,25 @@
 <resources>
     <item name="url_bungie" type="string">https://www.bungie.net/Platform/</item>
 
-    <item name="url_lista_eventos" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_eventos/</item>
-    <item name="url_cria_evento" type="string">http://www.dev42.com.br/ironlife/app/rest/criar_evento/</item>
-    <item name="url_lista_tipo_evento" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_tipos_eventos/</item>
-    <item name="url_inscrever_evento" type="string">http://www.dev42.com.br/ironlife/app/eventousuario/adicionar/</item>
-    <item name="url_cancelar_evento" type="string">http://www.dev42.com.br/ironlife/app/eventousuario/remover/</item>
-    <item name="url_evento_com_usuarios" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_evento_com_usuarios/</item>
-    <item name="url_lista_usuarios_evento" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_usuarios_evento/</item>
-    <item name="url_validar_usuario" type="string">http://www.dev42.com.br/ironlife/app/usuarios/validar/</item>
+    <item name="url_lista_eventos_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_eventos/</item>
+    <item name="url_cria_evento_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/criar_evento/</item>
+    <item name="url_lista_tipo_evento_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_tipos_eventos/</item>
+    <item name="url_inscrever_evento_remoto" type="string">http://www.dev42.com.br/ironlife/app/eventousuario/adicionar/</item>
+    <item name="url_cancelar_evento_remoto" type="string">http://www.dev42.com.br/ironlife/app/eventousuario/remover/</item>
+    <item name="url_evento_com_usuarios_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_evento_com_usuarios/</item>
+    <item name="url_lista_usuarios_evento_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_usuarios_evento/</item>
+    <item name="url_validar_usuario_remoto" type="string">http://www.dev42.com.br/ironlife/app/usuarios/validar/</item>
+    <item name="url_add_usuario_bungie_remoto" type="string">http://www.dev42.com.br/ironlife/app/Usuariobungie/adicionar/</item>
 
-    <item name="url_lista_eventos_casa" type="string">http://10.1.1.105/ironlife/app/rest/listar_eventos/</item>
-    <item name="url_cria_evento_casa" type="string">http://10.1.1.105/ironlife/app/rest/criar_evento/</item>
-    <item name="url_lista_tipo_evento_casa" type="string">http://10.1.1.105/ironlife/app/rest/listar_tipos_eventos/</item>
-    <item name="url_inscrever_evento_casa" type="string">http://10.1.1.105/ironlife/app/eventousuario/adicionar/</item>
-    <item name="url_cancelar_evento_casa" type="string">http://10.1.1.105/ironlife/app/eventousuario/remover/</item>
-    <item name="url_evento_com_usuarios_casa" type="string">http://10.1.1.105/ironlife/app/rest/listar_evento_com_usuarios/</item>
-    <item name="url_lista_usuarios_evento_casa" type="string">http://10.1.1.105/ironlife/app/rest/listar_usuarios_evento/</item>
-    <item name="url_validar_usuario_casa" type="string">http://10.1.1.105/ironlife/app/usuarios/validar/</item>
-
+    <item name="url_lista_eventos" type="string">http://10.1.1.105/ironlife/app/rest/listar_eventos/</item>
+    <item name="url_cria_evento" type="string">http://10.1.1.105/ironlife/app/rest/criar_evento/</item>
+    <item name="url_lista_tipo_evento" type="string">http://10.1.1.105/ironlife/app/rest/listar_tipos_eventos/</item>
+    <item name="url_inscrever_evento" type="string">http://10.1.1.105/ironlife/app/eventousuario/adicionar/</item>
+    <item name="url_cancelar_evento" type="string">http://10.1.1.105/ironlife/app/eventousuario/remover/</item>
+    <item name="url_evento_com_usuarios" type="string">http://10.1.1.105/ironlife/app/rest/listar_evento_com_usuarios/</item>
+    <item name="url_lista_usuarios_evento" type="string">http://10.1.1.105/ironlife/app/rest/listar_usuarios_evento/</item>
+    <item name="url_validar_usuario" type="string">http://10.1.1.105/ironlife/app/usuarios/validar/</item>
+    <item name="url_add_usuario_bungie" type="string">http://10.1.1.105/ironlife/app/Usuariobungie/adicionar/</item>
 
     <item name="url_lista_eventos_work" type="string">http://192.168.0.107:81/ironlife/app/rest/listar_eventos/</item>
     <item name="url_cria_evento_work" type="string">http://192.168.0.107:81/ironlife/app/rest/criar_evento/</item>
@@ -29,4 +30,5 @@
     <item name="url_evento_com_usuarios_work" type="string">http://192.168.0.107:81/ironlife/app/rest/listar_evento_com_usuarios/</item>
     <item name="url_lista_usuarios_evento_work" type="string">http://192.168.0.107:81/ironlife/app/rest/listar_usuarios_evento/</item>
     <item name="url_validar_usuario_work" type="string">http://192.168.0.107:81/ironlife/app/usuarios/validar/</item>
+    <item name="url_add_usuario_bungie_work" type="string">http://192.168.0.107:81/ironlife/app/Usuariobungie/adicionar/</item>
 </resources>
