--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ffffff</color>
     <color name="cortextobranco">#ffffff</color>
+    <color name="cortextocinza">#bdbdbd</color>
     <color name="coralerta">#bd5000</color>
     <color name="corbarras">#00c7ec</color>
     <color name="backgroundescuro">#002f43</color>
