--- a/app/src/main/res/layout/activity_view_evento.xml
+++ b/app/src/main/res/layout/activity_view_evento.xml
@@ -10,6 +10,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"    >
 
+    <FrameLayout
+        android:id="@+id/frameload"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+        <ProgressBar
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center_horizontal|center_vertical"/>
+    </FrameLayout>
+
     <TextView
         android:id="@+id/addtitulo"
         android:layout_width="match_parent"
