--- a/app/src/main/res/layout/activity_view_evento.xml
+++ b/app/src/main/res/layout/activity_view_evento.xml
@@ -188,18 +188,6 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnconvocar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:text="Convocar Guardiões"
-        android:layout_gravity="center"
-        android:textColor="@color/cortextobranco"
-        android:background="@color/coralerta"
-        android:layout_marginTop="16dp"/>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -225,10 +213,20 @@
             android:layout_centerInParent="true"/>
     </RelativeLayout>
 
+    <GridView
+        android:id="@+id/usuariosgrid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="2"
+        android:verticalSpacing="2dp"
+        android:horizontalSpacing="2dp">
+
+    </GridView>
     <ListView
         android:id="@+id/usuarios"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
+
 
 </LinearLayout>
