--- a/app/src/main/res/layout/list_eventos.xml
+++ b/app/src/main/res/layout/list_eventos.xml
@@ -14,6 +14,15 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="8dp" />
 
+    <ImageView
+        android:id="@+id/ghost"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:src="@drawable/ic_ghost"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/imagemevento"/>
+
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
@@ -25,7 +34,7 @@
         android:id="@+id/tituloevento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Escolinha 1 12 13123 123 12312414"
+        android:text="Escolinha 1 12 "
         android:layout_toRightOf="@id/imagemevento"
         android:textColor="@color/cortextobranco"
         android:textSize="22sp"
@@ -158,15 +167,10 @@
 
         </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/ghost"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_ghost"
-            android:layout_marginRight="16dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"/>
+
     </LinearLayout>
+
+
 
     <TextView
         android:id="@+id/responsavelevento"
