--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="backgroundescuro">#002f43</color>
     <color name="backgroundescuro_contraste">#013a53</color>
     <color name="azulmedio">#006599</color>
+    <color name="verde">#33ab00</color>
 
 
 
