--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,13 @@
         android:layout_gravity="center"
         android:textColor="@color/cortextobranco"
         android:background="@color/coralerta"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:visibility="gone"/>
+
+        <ProgressBar
+            android:id="@+id/progress_start"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal|center_vertical"/>
 
 </LinearLayout>
