--- a/app/src/main/res/menu/menu_evento.xml
+++ b/app/src/main/res/menu/menu_evento.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/tutoriais_youtube"
+        android:title="Tutoriais"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/logout"
         android:title="Logout"
         app:showAsAction="never" />
