--- a/app/src/main/res/layout/activity_tutorial_youtube.xml
+++ b/app/src/main/res/layout/activity_tutorial_youtube.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_tutorial_youtube"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+
     tools:context="dev42.ironlife.activities.TutorialYoutubeActivity"
     android:background="@color/backgroundescuro">
 
@@ -35,11 +35,33 @@
             android:layout_centerInParent="true"/>
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/listViewYoutube"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/barrarelativeyoutube">
 
-    </ListView>
+        <ListView
+            android:id="@+id/listViewYoutube"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
+    <FrameLayout
+        android:id="@+id/frameload"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#CC013a53"
+        android:visibility="gone">
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"/>
+    </FrameLayout>
 </RelativeLayout>
