Add Videos Youtube

--- a/app/src/main/res/layout/list_tutorial_youtube.xml
+++ b/app/src/main/res/layout/list_tutorial_youtube.xml
@@ -5,9 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@color/backgroundescuro"
     android:paddingTop="16dp"
-    android:paddingBottom="10dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp">
+    android:paddingBottom="10dp">
 
     <ImageView
         android:id="@+id/img_video"
@@ -15,6 +13,8 @@
         android:layout_height="60dp"
         android:src="@drawable/raid_demo2"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
          />
 
     <TextView
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:text="Escolinha 1 12 "
         android:textColor="@color/cortextobranco"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:layout_alignTop="@id/imagemevento"
         android:layout_marginLeft="8dp"
         android:layout_gravity="center_vertical"/>
