--- a/app/src/main/res/menu/menu_evento.xml
+++ b/app/src/main/res/menu/menu_evento.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/tutoriais_youtube"
-        android:title="Tutoriais"
+        android:title="Videos"
         app:showAsAction="never" />
     <item
         android:id="@+id/logout"
