--- a/app/src/main/res/menu/menu_tutotial_youtube.xml
+++ b/app/src/main/res/menu/menu_tutotial_youtube.xml
@@ -5,6 +5,6 @@
         android:id="@+id/search"
         android:title="search_title"
         android:icon="@drawable/ic_search"
-        app:showAsAction="collapseActionView|ifRoom"
+        app:showAsAction="always"
         app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
