--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -2,28 +2,29 @@
 <resources>
     <item name="url_bungie" type="string">https://www.bungie.net/Platform/</item>
 
-    <item name="url_lista_eventos_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_eventos/</item>
-    <item name="url_cria_evento_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/criar_evento/</item>
-    <item name="url_lista_tipo_evento_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_tipos_eventos/</item>
-    <item name="url_inscrever_evento_remoto" type="string">http://www.dev42.com.br/ironlife/app/eventousuario/adicionar/</item>
-    <item name="url_cancelar_evento_remoto" type="string">http://www.dev42.com.br/ironlife/app/eventousuario/remover/</item>
-    <item name="url_evento_com_usuarios_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_evento_com_usuarios/</item>
-    <item name="url_lista_usuarios_evento_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_usuarios_evento/</item>
-    <item name="url_validar_usuario_remoto" type="string">http://www.dev42.com.br/ironlife/app/usuarios/validar/</item>
-    <item name="url_add_usuario_bungie_remoto" type="string">http://www.dev42.com.br/ironlife/app/Usuariobungie/adicionar/</item>
-    <item name="url_convocar_usuarios_bungie_remoto" type="string">http://www.dev42.com.br/ironlife/app/rest/enviar_mensagem_evento/</item>
+    <item name="url_lista_eventos" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_eventos/</item>
+    <item name="url_cria_evento" type="string">http://www.dev42.com.br/ironlife/app/rest/criar_evento/</item>
+    <item name="url_lista_tipo_evento" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_tipos_eventos/</item>
+    <item name="url_inscrever_evento" type="string">http://www.dev42.com.br/ironlife/app/eventousuario/adicionar/</item>
+    <item name="url_cancelar_evento" type="string">http://www.dev42.com.br/ironlife/app/eventousuario/remover/</item>
+    <item name="url_evento_com_usuarios" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_evento_com_usuarios/</item>
+    <item name="url_lista_usuarios_evento" type="string">http://www.dev42.com.br/ironlife/app/rest/listar_usuarios_evento/</item>
+    <item name="url_validar_usuario" type="string">http://www.dev42.com.br/ironlife/app/usuarios/validar/</item>
+    <item name="url_add_usuario_bungie" type="string">http://www.dev42.com.br/ironlife/app/Usuariobungie/adicionar/</item>
+    <item name="url_convocar_usuarios_bungie" type="string">http://www.dev42.com.br/ironlife/app/rest/enviar_mensagem_evento/</item>
+    <item name="url_lista_tutoriais_youtube" type="string">http://www.dev42.com.br/ironlife/app/tutoriais/lista_tutoriais_youtube/</item>
 
-    <item name="url_lista_eventos" type="string">http://10.1.1.105/ironlife/app/rest/listar_eventos/</item>
-    <item name="url_cria_evento" type="string">http://10.1.1.105/ironlife/app/rest/criar_evento/</item>
-    <item name="url_lista_tipo_evento" type="string">http://10.1.1.105/ironlife/app/rest/listar_tipos_eventos/</item>
-    <item name="url_inscrever_evento" type="string">http://10.1.1.105/ironlife/app/eventousuario/adicionar/</item>
-    <item name="url_cancelar_evento" type="string">http://10.1.1.105/ironlife/app/eventousuario/remover/</item>
-    <item name="url_evento_com_usuarios" type="string">http://10.1.1.105/ironlife/app/rest/listar_evento_com_usuarios/</item>
-    <item name="url_lista_usuarios_evento" type="string">http://10.1.1.105/ironlife/app/rest/listar_usuarios_evento/</item>
-    <item name="url_validar_usuario" type="string">http://10.1.1.105/ironlife/app/usuarios/validar/</item>
-    <item name="url_add_usuario_bungie" type="string">http://10.1.1.105/ironlife/app/Usuariobungie/adicionar/</item>
-    <item name="url_convocar_usuarios_bungie" type="string">http://10.1.1.105/ironlife/app/rest/enviar_mensagem_evento/</item>
-    <item name="url_lista_tutoriais_youtube" type="string">http://10.1.1.105/ironlife/app/tutoriais/lista_tutoriais_youtube/</item>
+    <item name="url_lista_eventos_home" type="string">http://10.1.1.105/ironlife/app/rest/listar_eventos/</item>
+    <item name="url_cria_evento_home" type="string">http://10.1.1.105/ironlife/app/rest/criar_evento/</item>
+    <item name="url_lista_tipo_evento_home" type="string">http://10.1.1.105/ironlife/app/rest/listar_tipos_eventos/</item>
+    <item name="url_inscrever_evento_home" type="string">http://10.1.1.105/ironlife/app/eventousuario/adicionar/</item>
+    <item name="url_cancelar_evento_home" type="string">http://10.1.1.105/ironlife/app/eventousuario/remover/</item>
+    <item name="url_evento_com_usuarios_home" type="string">http://10.1.1.105/ironlife/app/rest/listar_evento_com_usuarios/</item>
+    <item name="url_lista_usuarios_evento_home" type="string">http://10.1.1.105/ironlife/app/rest/listar_usuarios_evento/</item>
+    <item name="url_validar_usuario_home" type="string">http://10.1.1.105/ironlife/app/usuarios/validar/</item>
+    <item name="url_add_usuario_bungie_home" type="string">http://10.1.1.105/ironlife/app/Usuariobungie/adicionar/</item>
+    <item name="url_convocar_usuarios_bungie_home" type="string">http://10.1.1.105/ironlife/app/rest/enviar_mensagem_evento/</item>
+    <item name="url_lista_tutoriais_youtube_home" type="string">http://10.1.1.105/ironlife/app/tutoriais/lista_tutoriais_youtube/</item>
 
     <item name="url_lista_eventos_work" type="string">http://192.168.0.107:81/ironlife/app/rest/listar_eventos/</item>
     <item name="url_cria_evento_work" type="string">http://192.168.0.107:81/ironlife/app/rest/criar_evento/</item>
@@ -35,4 +36,5 @@
     <item name="url_validar_usuario_work" type="string">http://192.168.0.107:81/ironlife/app/usuarios/validar/</item>
     <item name="url_add_usuario_bungie_work" type="string">http://192.168.0.107:81/ironlife/app/Usuariobungie/adicionar/</item>
     <item name="url_convocar_usuarios_bungie_work" type="string">http://192.168.0.107:81/ironlife/app/rest/enviar_mensagem_evento/</item>
+    <item name="url_lista_tutoriais_youtube_work" type="string">http://192.168.0.107:81/ironlife/app/tutoriais/lista_tutoriais_youtube/</item>
 </resources>
